record & tck